routetable.tf
resource "aws_route_table" "routetable" {
  vpc_id = aws_vpc.task1.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  tags = var.tags
}
